# hardware-controller

./: README.md  canable_start.sh
CTRE_Phoenix/: CMakeLists.txt  package.xml
can_msgs/: CMakeLists.txt  package.xml
can_msgs/msg/: CanBusStatusMsg.msg  MotorMsg.msg
can_msgs/srv/: SetMotorConfig.srv  SetPIDFGains.srv
hardware-controller/: CMakeLists.txt  package.xml
hardware-controller/src/: hardware_node.cpp
hardware_controller/: CMakeLists.txt  package.xml
hardware_controller/cfg/: hardware_node.yaml
hardware_controller/include/hardware_controller/: motor.hpp  talon_brushed.hpp  talon_brushless.hpp
hardware_controller/launch/: hardware.launch.py
hardware_controller/src/: hardware_node.cpp
master_controller/: .gitignore  build.gradle
